# pyre

./: .gitignore  Cargo.toml  Dockerfile  README.md  db.just  docker.just  justfile
.githooks/: pre-commit
.github/workflows/: ci-coverage.yml  ci-release.yml  ci-rust.yml  docs.yml
.sqlx/: query-74c29fc9c2b038fe1b546b26c038eb5131d591b2fdca16834d7e00fd92bc0c2d.json  query-7be52305fd600f8dcf860c44966eb790c776ae59047e0774a4ad10367eba0720.json  query-957f93b101f5cf51bc232d41ef58039670146af5b42a555e2844f04870575e3f.json  query-9764bef6c01847f273de707b88391f2700f15d70715ca67150d574d11bedd6bf.json
config/: pyre-dbsync.toml  pyre.toml
crates/pyre-axum-csrf/: Cargo.toml  README.md
crates/pyre-axum-csrf/src/: cookie.rs  error.rs  extract.rs  guard.rs  lib.rs  token.rs
crates/pyre-build/: Cargo.toml  README.md
crates/pyre-build/src/: lib.rs
crates/pyre-cli/: Cargo.toml  README.md
crates/pyre-cli/src/: lib.rs
crates/pyre-cli/src/shutdown/: mod.rs
crates/pyre-cli/src/spinner/: mod.rs
crates/pyre-core/: .gitignore  Cargo.toml  README.md  build.rs  test-master.key
crates/pyre-core/src/: config.rs  error.rs  main.rs
crates/pyre-core/src/auth/: backend.rs  error.rs  mod.rs  provider.rs  session.rs  user.rs
crates/pyre-core/src/auth/provider/: discord.rs  mod.rs
crates/pyre-core/src/config/: mod.rs  toml.rs
crates/pyre-core/src/csrf/: error.rs  extract.rs  guard.rs  mod.rs  token.rs
crates/pyre-core/src/db/: mod.rs
crates/pyre-core/src/db/sync/: config.rs  mod.rs
crates/pyre-core/src/db/sync/scryfall/: bulk.rs  card.rs  db_card.rs  mod.rs
crates/pyre-core/src/svc/: auth.rs  limiter.rs  middleware.rs  mod.rs  server.rs  state.rs
crates/pyre-core/test/: config.toml
crates/pyre-crypto/: Cargo.toml  README.md
crates/pyre-crypto/src/: eq.rs  hmac.rs  lib.rs  tls.rs
crates/pyre-crypto/src/kdf/: mod.rs  scrypt.rs
crates/pyre-fs/: Cargo.toml  README.md
crates/pyre-fs/src/: fs.rs  lib.rs  toml.rs
crates/pyre-telemetry/: Cargo.toml  README.md  justfile
crates/pyre-telemetry/src/: compound.rs  config.rs  lib.rs  suspendable.rs
crates/pyre-transport/: Cargo.toml  README.md
crates/pyre-transport/src/: lib.rs
crates/pyre-transport/src/body/: server.rs
crates/pyre-transport/src/stream/: mod.rs  server.rs
crates/pyre-transport/src/stream/quinn/: server.rs
crates/pyre-transport/src/svc/: axum.rs
docs/: pnpm-lock.yaml  rspress.config.ts
docs/docs/: index.md
etc/: db.just  deploy.just  keys.just  telemetry.just
etc/deploy/: db-wait.sh  docker-compose.yml
etc/localhost/: chrome.sh  local-key.der  local.der
migrations/: 20250420031145_genesis.sql  20250426062906_scryfall.sql
telemetry/: config.alloy  docker-compose.yml
