[package]
name = "pyre-axum-csrf"
version = "0.1.0"
description = "Pyre axum csrf."

edition.workspace = true

authors = ["Orbital Drift"]
homepage = "https://odlabs.xyz"
repository = "https://github.com/orbitaldrift/pyre"
documentation = "https://docs.odlabs.xyz"

keywords = ["web", "api"]
categories = ["web-programming"]

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
futures-util = { workspace = true }
rand = { workspace = true }
secstr = { workspace = true }

axum-core = { version = "0.5.2" }

tower-cookies = "0.11.0"
tower-layer = "0.3.3"
tower-service = "0.3.3"

base64 = "0.22.1"
hmac = "0.12.1"
http = "1.3.0"
sha2 = "0.10.8"
subtle = { version = "2.6.1" }

[dev-dependencies]
color-eyre = { workspace = true }
