[package]
name = "pyre-build"
version = "0.1.0"
description = "Pyre build."

edition.workspace = true

authors = ["Orbital Drift"]
homepage = "https://odlabs.xyz"
repository = "https://github.com/orbitaldrift/pyre"
documentation = "https://docs.odlabs.xyz"

keywords = ["web", "api"]
categories = ["web-programming"]

[dependencies]
color-eyre = { workspace = true }
termion = { workspace = true }
vergen-git2 = { workspace = true }
