[package]
name = "pyre-core"
version = "0.1.0"
description = "Pyre core."

edition.workspace = true

authors = ["Orbital Drift"]
homepage = "https://odlabs.xyz"
repository = "https://github.com/orbitaldrift/pyre"
documentation = "https://docs.odlabs.xyz"

keywords = ["web", "api"]
categories = ["web-programming"]

[dependencies]
pyre-axum-csrf = { workspace = true }
pyre-build = { workspace = true }
pyre-cli = { workspace = true }
pyre-crypto = { workspace = true }
pyre-fs = { workspace = true }
pyre-telemetry = { workspace = true }
pyre-transport = { workspace = true }

color-eyre = { workspace = true }
thiserror = { workspace = true }

tracing = { workspace = true }

tokio = { workspace = true }
tokio-util = { workspace = true }

serde = { workspace = true }
chrono = { workspace = true }
strum = { workspace = true }

async-trait = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }

rustls = { workspace = true }
secstr = { workspace = true }

rand = { workspace = true }
const-hex = { workspace = true }

garde = { workspace = true }

tikv-jemallocator = { version = "0.6.0" }

uuid = { version = "1.16.0", features = ["v4"] }

oauth2 = "5.0.0"
reqwest = { version = "0.12.15", default-features = false, features = [
    "http2",
    "json",
    "stream",
    "zstd",
] }

quinn = { version = "0.11.7", default-features = false, features = [
    "runtime-tokio",
    "rustls",
    "ring",
] }
axum = { workspace = true, features = [
    "query",
    "form",
    "tokio",
    "tracing",
    "http2",
    "json",
    "macros",
    "ws",
] }
axum-login = "0.17.0"

tower = { version = "0.5.2", features = ["limit", "load"] }
tower-http = { version = "0.6.2", features = [
    "add-extension",
    "catch-panic",
    "tracing",
    "trace",
    "metrics",
    "cors",
    "limit",
    "compression-zstd",
    "decompression-zstd",
    "request-id",
    "timeout",
] }
tower-sessions = { version = "0.14.0", default-features = false, features = [
    "signed",
] }
tower-sessions-redis-store = "0.16.0"

tokio-rustls = { version = "0.26.2", features = ["ring"] }
hyper = { version = "1.6.0", default-features = false, features = ["http2"] }
hyper-util = { version = "0.1.11", features = ["http2"] }
h3 = { version = "0.0.7" }

sqlx = { version = "0.8.5", default-features = false, features = [
    "macros",
    "chrono",
    "postgres",
    "migrate",
    "derive",
    "runtime-tokio-rustls",
] }

bytes = "1.10.1"
once_cell = "1.21.3"

time = "0.3.41"

blake3 = { version = "1.8.1", features = ["serde"] }

[build-dependencies]
pyre-build = { workspace = true }
color-eyre = { workspace = true }
vergen-git2 = { workspace = true }
