[package]
name = "pyre-crypto"
version = "0.1.0"
description = "Pyre crypto."

edition.workspace = true

authors = ["Orbital Drift"]
homepage = "https://odlabs.xyz"
repository = "https://github.com/orbitaldrift/pyre"
documentation = "https://docs.odlabs.xyz"

keywords = ["web", "api"]
categories = ["web-programming"]

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
rustls = { workspace = true }

const-hex = "1.14.0"
rand_core = "0.6.4"
scrypt = "0.11.0"
rcgen = "0.13.2"
rand = "0.8.5"
