[package]
name = "pyre-crypto"
version = "0.1.0"
description = "Pyre crypto."

edition.workspace = true

authors = ["Orbital Drift"]
homepage = "https://odlabs.xyz"
repository = "https://github.com/orbitaldrift/pyre"
documentation = "https://docs.odlabs.xyz"

keywords = ["web", "api"]
categories = ["web-programming"]

[dependencies]
thiserror = { workspace = true }
rustls = { workspace = true }

rand_core = "0.6.4"
scrypt = "0.11.0"
rand = "0.8.5"

[dev-dependencies]
const-hex = { workspace = true }
