[package]
name = "pyre-fs"
version = "0.1.0"
description = "Pyre filesytem."

edition.workspace = true

authors = ["Orbital Drift"]
homepage = "https://odlabs.xyz"
repository = "https://github.com/orbitaldrift/pyre"
documentation = "https://docs.odlabs.xyz"

keywords = ["web", "api"]
categories = ["web-programming"]

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }

async-trait = { workspace = true }
