[package]
name = "pyre-telemetry"
version = "0.1.0"
description = "Pyre telemetry."

edition.workspace = true

authors = ["Orbital Drift"]
homepage = "https://odlabs.xyz"
repository = "https://github.com/orbitaldrift/pyre"
documentation = "https://docs.odlabs.xyz"

keywords = ["web", "api"]
categories = ["web-programming"]

default-run = "otlp"

[[bin]]
name = "otlp"
path = "src/bin/otlp.rs"

[dependencies]
thiserror = { workspace = true }

tracing = { workspace = true }

tokio = { workspace = true }

futures = { workspace = true }

serde = { workspace = true }
strum = { workspace = true }
bitflags = { workspace = true }
garde = { workspace = true }

tracing-subscriber = { workspace = true }

tracing-opentelemetry = { version = "0.30.0" }

opentelemetry = { version = "0.29.1", default-features = false, features = [
    "trace",
    "metrics",
    "logs",
] }

opentelemetry-otlp = { version = "0.29.0", default-features = false, features = [
    "internal-logs",
    "metrics",
    "logs",
    "trace",
    "serialize",
    "grpc-tonic",
    "zstd-tonic",
] }

opentelemetry-stdout = { version = "0.29.0" }

opentelemetry_sdk = { version = "0.29.0", default-features = false, features = [
    "internal-logs",
    "rt-tokio",
    "metrics",
    "logs",
    "trace",
] }

opentelemetry-appender-tracing = { version = "0.29.1" }
opentelemetry-resource-detectors = { version = "0.8.0" }
opentelemetry-semantic-conventions = { version = "0.29.0" }
opentelemetry-proto = { version = "0.29.0" }

tonic = { version = "0.12.3", default-features = false, features = [
    "server",
    "zstd",
] }

clap = { version = "4.2.0", default-features = false, features = [
    "std",
    "derive",
] }
